# GlobalHeadsOrTails

./: .env.example  .gitignore  .mcp.json  AGENT_TASKS.md  AGENT_TASKS_IMPLEMENTATION.md  Code.gs  FILES_MANIFEST.md  GEMINI.md  ISO Compliant NDEF Reference.md  Makefile.prj  START_HERE.md  task.md
ntag424_sdm_provisioner/: .dockerignore  .gitignore  AGENTS.md  ARCH.md  CHANGELOG.md  COMMAND_GLOSSARY.md  DECISIONS.md  Dockerfile  HOW_TO_RUN.md  LESSONS.md  LINTING.md  MANIFEST.in  MINDMAP.md  Makefile  README.md  charts.md  debug_textual.py  lint.ps1  pyproject.toml  run.sh
ntag424_sdm_provisioner/acceptance_tests/: README.md  test_changekey_direct.py  test_changekey_production_vs_verified.py  test_changekey_to_same_key.py  test_changekey_with_hal.py  test_format_picc.py  test_format_using_production.py  test_fresh_tag_readonly.py  test_manual_authenticated_command.py  test_production_auth.py  test_seritag_ev2_compliance.py  test_session_validation.py  test_tui_simulation.py  test_which_key_works.py
ntag424_sdm_provisioner/agents/: CHAT.md  _template_INFO_AGENT.md  _template_PE_AGENT.md  _template_PM_AGENT.md  _template_QA_AGENT.md  _template_SE_AGENT.md  _template_SM_AGENT.md  _template_SWE_AGENT.md  _template_context.md  _template_current_task.md  _template_next_steps.md
ntag424_sdm_provisioner/agents/bob.docs/: AGENT.md  BOB_SYSTEM_PROTOCOL.md  Bob_PE_AGENT.md  HELP.md  context.md  current_task.md  next_steps.md  state_management_fix.md
ntag424_sdm_provisioner/agents/cypher.docs/: Cypher_PM_AGENT.md  context.md  current_task.md  next_steps.md  prd_doneness_assessment.md
ntag424_sdm_provisioner/agents/morpheus.docs/: COIN_NAMING_ARCHITECTURE.md  Morpheus_SE_AGENT.md  context.md  current_task.md  next_steps.md
ntag424_sdm_provisioner/agents/mouse.docs/: Mouse_SM_AGENT.md  SPRINT_WRITEDATA_FIX.md  context.md  current_task.md  next_steps.md  sprint_assessment.md
ntag424_sdm_provisioner/agents/neo.docs/: Neo_SWE_AGENT.md  context.md  current_task.md  next_steps.md
ntag424_sdm_provisioner/agents/oracle.docs/: COMMANDS.md  GROOM_REPORT_2026-01-01.md  Oracle_INFO_AGENT.md  SYMBOL_INDEX.md  context.md  current_task.md  next_steps.md
ntag424_sdm_provisioner/agents/tools/: chat.py
ntag424_sdm_provisioner/agents/trin.docs/: Trin_QA_AGENT.md  context.md  current_task.md  next_steps.md
ntag424_sdm_provisioner/data/: app.db  tag_keys.csv.old
ntag424_sdm_provisioner/data_prod/: app.db
ntag424_sdm_provisioner/docs/: PRD.md  ROADMAP.md  SYMBOL_INDEX.md  bob_knowledge.db
ntag424_sdm_provisioner/docs/analysis/: AN12343_CHANGEKEY_ANALYSIS.md  ANDROID_NFC_CHECKS_IMPLEMENTATION.md  ANDROID_NFC_CORRECTION.md  ANDROID_NFC_DETECTION_VERIFICATION.md  ANDROID_NFC_FIX_SDM_FILE_READ.md  ANDROID_NFC_VS_CMAC_TRADEOFF.md  APDU_ANALYSIS.md  ARDUINO_CHANGEFILESETTINGS_ANALYSIS.md  AUTHENTICATION_DELAY_FINDINGS.md  AUTH_FLOW_ANALYSIS.md  CHANGEFILESETTINGS_AUTH_FIX.md  CHANGEKEY_EXPERIMENT_LOG.md  CHANGEKEY_SUCCESS.md  CHUNKING_REFACTOR_LOG.md  COMPREHENSIVE_PHASE2_VARIATIONS_RESULTS.md  DELAY_COUNTER_CRITICAL_FINDING.md  DIAGNOSTIC_FINDINGS.md  FINAL_INVESTIGATION_PLAN.md  FINDINGS_FOR_USER.md  FIX_PLAN_PADDING.md  FORMATPICC_DISABLED_TAGS.md  FORMATPICC_SEQUENCE_VERIFICATION.md  FRESH_TAG_FINDINGS.md  HARDWARE_TEST_RESULTS.md  IMPLEMENTATION_VERIFICATION.md  NDEF_WRITE_AUTH_FIX.md  NDEF_WRITE_SEQUENCE_SPEC.md  PACKET_DIAGRAMS.md  PADDING_FIX_SUMMARY.md  REFACTORING_ANALYSIS.md  REFACTORING_LOG.md  REFACTORING_TOOL_ARCHITECTURE.md  RUNNER_REFACTOR_PLAN.md  SDM_OFFSET_BUG_ANALYSIS.md  SDM_SETUP_SEQUENCE.md  SECTION_9_ANALYSIS_PLAN.md  SECTION_9_COMPARISON.md  STATIC_URL_PROVISIONING.md  TESTING_TOOL_ARCHITECTURE.md  TOOL_SYSTEM_READY.md  (+3 more)
ntag424_sdm_provisioner/docs/archive/: SUCCESSFUL_PROVISION_FLOW.md.archived
ntag424_sdm_provisioner/docs/seritag/: README.md
ntag424_sdm_provisioner/docs/specs/: AN12196_CHANGEKEY_EXAMPLE.md  acr122u-reader-spec.md  (+5 more)
ntag424_sdm_provisioner/docs_archive/: AUTHENTICATION_INVESTIGATION.md  BYTE_ALIGNMENT_INVESTIGATION.md  CHANGEKEY_EXPERIMENTAL_PLAN.md  CLEANUP_PLAN.md  CURRENT_INVESTIGATION_STATUS.md  EV2_PHASE2_INVESTIGATION.md  EXAMPLES_CLEANUP_PLAN.md  ITERATION_PLAN.md  MOCK_HAL_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROTOCOL_INVESTIGATION.md  PHASE3_COMPLETE.md  PLAN_KEY_RECOVERY_UX_REDESIGN.md  PROGRESS_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PLAN_2026-01-01.md  REFACTORING_SESSION_COMPLETE.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  RNDB_ROTATION_INVESTIGATION.md  SDM_STATUS_SUMMARY.md  SDM_SUN_IMPLEMENTATION_PLAN.md  SERITAG_INVESTIGATION_COMPLETE.md  SESSION_2025-11-06_TYPE_SAFE_REFACTORING.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  STEP_COMPLETE_SUMMARY.md  TYPE_SAFE_REFACTORING_SUMMARY.md  WAKE_UP_SUMMARY.md  critical_blockers.md
ntag424_sdm_provisioner/scripts/: activate.ps1  backfill_coin_names.py  backfill_coin_names_manual.py  lint-full.ps1  lint-quick.ps1  set_coin_messages.py
ntag424_sdm_provisioner/tests/: conftest.py  dna_calc_reference.py  mock_hal.py  ntag_communicator.py  raw_changekey_test_fixed.py  raw_format_picc.py  raw_format_picc_fixed.py  raw_full_diagnostic.py  raw_read_tag_state.py  raw_readonly_test.py  raw_readonly_test_fixed.py  repro_change_file_settings_bug.py  reset_key0_raw_pyscard.py  test_an12343_getkeyversion.py  test_auto_chunking.py  test_change_key.py  test_clock.py  test_coin_naming.py  test_compare_with_arduino.py  test_crypto_components.py  test_crypto_validation.py  test_csv_key_manager.py  test_diagnostics_service.py  test_integration.py  test_key_manager.py  test_key_manager_interface.py  test_provision_sequence.py  test_provisioning_service.py  test_provisioning_service_sequence.py  test_sdm_phase1.py  test_sdm_url_template_fix.py  test_server_coin_messages.py  test_server_flip_off.py  test_server_flip_off_integration.py  test_server_logic.py  test_server_polling.py  test_session_with_arduino_keys.py  test_setup_url_simulation.py  test_tag_status.py  test_tool_availability.py  (+8 more)
ntag424_sdm_provisioner/tools/: debug_sdm_sequence.py
(+148 files in other folders)
